addons/k8s-gatekeeper/templates/edtech-edtech_retention_after_course_completion-constrainttemplate.yaml
apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  name: edtech-edtech_retention_after_course_completion
  annotations:
    rulehub.id: edtech.edtech_retention_after_course_completion
    rulehub.title: <Policy Title>
    rulehub.links: |
      - <https://reference-1>
      - <https://reference-2>
spec:
  crd:
    spec:
      names:
        kind: <Kind>
      validation:
        openAPIV3Schema:
          type: object
          properties:
            # add schema for parameters
            <param1>:
              type: string
  targets:
  - target: admission.k8s.gatekeeper.sh
    rego: |
      package rulehub.edtech.edtech_retention_after_course_completion
      import future.keywords.if

      default deny = []

      # Example: deny with a message
      deny[msg] {
        input.review.kind.kind == "Deployment"
        msg := "edtech.edtech_retention_after_course_completion: example violation"
      }
